changes to make it run

--- a/particleSimulationParticipant/PackagingLog.html
+++ b/particleSimulationParticipant/PackagingLog.html
@@ -44,11 +44,12 @@
     </script> 
 </head>
  <body><meta charset="UTF-8">        
- <pre><font color=blue>mcc -W 'webapp:app1_1,CONFIG:C:\Users\beno1\AppData\Local\Temp\tp9a850f89_05ba_4141_96ec_e666e84e791e.xml' -d D:\Uni\Simulations\SwarmSimulation\app1_1 -v -Z autodetect -C D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp</font>
-Compiler version: 8.4 (R2022a)
+ <pre><font color=blue>mcc -W 'webapp:particleSimulationParticipant,CONFIG:C:\Users\beno1\AppData\Local\Temp\tpc7a12ba9_e8aa_43ed_b0b2_52e5758cc5e2.xml' -d D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant -v -C D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp</font>
+Compiler version: 8.2 (R2021a)
 Analyzing file dependencies. 
-<font color='orange'>Warning: Web apps that generate additional windows or apps are currently not supported. Check the following .mlapp files for window and app dependencies:
-D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp</font> 
+[Warning: Web apps that generate additional windows or apps are currently not supported. Check the following
+.mlapp files for window and app dependencies:
+D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp] 
 Parsing file "D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp" 
 	(referenced from command line). 
 
