changes to input

--- a/particleSimulationParticipant/PackagingLog.html
+++ b/particleSimulationParticipant/PackagingLog.html
@@ -44,12 +44,11 @@
     </script> 
 </head>
  <body><meta charset="UTF-8">        
- <pre><font color=blue>mcc -W 'webapp:particleSimulationParticipant,CONFIG:C:\Users\beno1\AppData\Local\Temp\tpc7a12ba9_e8aa_43ed_b0b2_52e5758cc5e2.xml' -d D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant -v -C D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp</font>
-Compiler version: 8.2 (R2021a)
+ <pre><font color=blue>mcc -W 'webapp:particleSimulationParticipant,CONFIG:C:\Users\beno1\AppData\Local\Temp\tp9440c80c_5c7c_42ed_bf5f_209ed11e55bc.xml' -d D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant -v -Z autodetect -C D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp</font>
+Compiler version: 8.4 (R2022a)
 Analyzing file dependencies. 
-[Warning: Web apps that generate additional windows or apps are currently not supported. Check the following
-.mlapp files for window and app dependencies:
-D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp] 
+<font color='orange'>Warning: Web apps that generate additional windows or apps are currently not supported. Check the following .mlapp files for window and app dependencies:
+D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp</font> 
 Parsing file "D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp" 
 	(referenced from command line). 
 
