small alterations - reduced test set

--- a/particleSimulationParticipant/PackagingLog.html
+++ b/particleSimulationParticipant/PackagingLog.html
@@ -44,10 +44,11 @@
     </script> 
 </head>
  <body><meta charset="UTF-8">        
- <pre><font color=blue>mcc -W 'webapp:particleSimulationParticipant,CONFIG:C:\Users\beno1\AppData\Local\Temp\tp9440c80c_5c7c_42ed_bf5f_209ed11e55bc.xml' -d D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant -v -Z autodetect -C D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp</font>
+ <pre><font color=blue>mcc -W 'webapp:particleSimulationParticipant,CONFIG:C:\Users\beno1\AppData\Local\Temp\tp94faba47_8564_4ec7_8bb9_bfa05850365f.xml' -d D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant -v -Z autodetect -C D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp</font>
 Compiler version: 8.4 (R2022a)
 Analyzing file dependencies. 
-<font color='orange'>Warning: Web apps that generate additional windows or apps are currently not supported. Check the following .mlapp files for window and app dependencies:
+<font color='orange'>Warning: Web apps that generate additional windows or apps are currently not supported. Check the
+following .mlapp files for window and app dependencies:
 D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp</font> 
 Parsing file "D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp" 
 	(referenced from command line). 
