--- a/SwarmSimulation2021/PackagingLog.html
+++ b/SwarmSimulation2021/PackagingLog.html
@@ -1,7 +1,16 @@
 <html><meta charset="UTF-8"><pre>
-<font color=blue>mcc -o SwarmSimulation2021_1 -W 'WinMain:SwarmSimulation2021_1,version=1.2' -T link:exe -d C:\Users\bj20907\Documents\GitHub\SwarmSimulation\SwarmSimulation2021\for_testing -v C:\Users\bj20907\Documents\GitHub\SwarmSimulation\particleSimulationParticipant.mlapp -r 'C:\Program Files\MATLAB\R2022b\toolbox\compiler\packagingResources\default_icon.ico' </font>
+<font color=blue>mcc -o SwarmSimulation2021 -W 'WinMain:SwarmSimulation2021,version=1.2' -T link:exe -d C:\Users\bj20907\Documents\GitHub\SwarmSimulation\SwarmSimulation2021\for_testing -v C:\Users\bj20907\Documents\GitHub\SwarmSimulation\particleSimulationParticipant.mlapp -r 'C:\Program Files\MATLAB\R2022b\toolbox\compiler\packagingResources\default_icon.ico' </font>
 Compiler version: 8.5 (R2022b)
 
 Analyzing file dependencies. 
 
+Parsing file "C:\Users\bj20907\Documents\GitHub\SwarmSimulation\particleSimulationParticipant.mlapp"
+	(referenced from command line).
+Generating file "C:\Users\bj20907\Documents\GitHub\SwarmSimulation\SwarmSimulation2021\for_testing\readme.txt".
+<font color=blue>Packaging...</font>
+Creating the bundle...
+Creating the install agent URL file...
+Web based installer created at C:\Users\bj20907\Documents\GitHub\SwarmSimulation\SwarmSimulation2021\for_redistribution\MyAppInstaller_web.exe.
+Packaging complete.
+Elapsed packaging time was: 12 seconds.
 </pre></html>
