changes so works with mobile
need to add series of tests so it works on mobile

--- a/particleSimulationParticipant/PackagingLog.html
+++ b/particleSimulationParticipant/PackagingLog.html
@@ -44,11 +44,12 @@
     </script> 
 </head>
  <body><meta charset="UTF-8">        
- <pre><font color=blue>mcc -W 'webapp:particleSimulationParticipant,CONFIG:C:\Users\beno1\AppData\Local\Temp\tpf5dbc549_f9a7_405f_b037_3a543479e94c.xml' -d E:\SwarmSimulation\particleSimulationParticipant -v -Z autodetect -C E:\SwarmSimulation\particleSimulationParticipant.mlapp</font>
+ <pre><font color=blue>mcc -W 'webapp:particleSimulationParticipant,CONFIG:C:\Users\beno1\AppData\Local\Temp\tp7d48e46a_af18_4178_8dfd_8e2556cba095.xml' -d E:\SwarmSimulation\particleSimulationParticipant -v -Z autodetect -C E:\SwarmSimulation\particleSimulationParticipant.mlapp</font>
 Compiler version: 8.6 (R2023a)
 Analyzing file dependencies. 
-<font color='orange'>Warning: Web apps that generate additional windows or apps are currently not supported. Check
-the following .mlapp files for window and app dependencies:
+<font color='orange'>Warning: Web apps that generate additional windows or apps
+are currently not supported. Check the following .mlapp
+files for window and app dependencies:
 E:\SwarmSimulation\particleSimulationParticipant.mlapp</font> 
 Parsing file "E:\SwarmSimulation\particleSimulationParticipant.mlapp"
 	(referenced from command line).
