--- a/particleSimulationParticipant/PackagingLog.html
+++ b/particleSimulationParticipant/PackagingLog.html
@@ -44,13 +44,16 @@
     </script> 
 </head>
  <body><meta charset="UTF-8">        
- <pre><font color=blue>mcc -W 'webapp:particleSimulationParticipant,CONFIG:C:\Users\beno1\AppData\Local\Temp\tp94faba47_8564_4ec7_8bb9_bfa05850365f.xml' -d D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant -v -Z autodetect -C D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp</font>
-Compiler version: 8.4 (R2022a)
+ <pre><font color=blue>mcc -W 'webapp:particleSimulationParticipant,CONFIG:C:\Users\beno1\AppData\Local\Temp\tp84cf330e_db08_4bc1_905b_b0ed6d542fe7.xml' -d E:\SwarmSimulation\particleSimulationParticipant -v -Z autodetect -C E:\SwarmSimulation\particleSimulationParticipant.mlapp</font>
+Compiler version: 8.6 (R2023a)
 Analyzing file dependencies. 
-<font color='orange'>Warning: Web apps that generate additional windows or apps are currently not supported. Check the
-following .mlapp files for window and app dependencies:
-D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp</font> 
-Parsing file "D:\Uni\Simulations\SwarmSimulation\particleSimulationParticipant.mlapp" 
-	(referenced from command line). 
+<font color='orange'>Warning: Web apps that generate additional windows or apps are currently not
+supported. Check the following .mlapp files for window and app dependencies:
+E:\SwarmSimulation\particleSimulationParticipant.mlapp</font> 
+<font color='orange'>Warning: Any function in your web app that generates additional window is currently
+not supported. Check the following function(s) that generates additional window:
+inputdlg,msgbox</font> 
+Parsing file "E:\SwarmSimulation\particleSimulationParticipant.mlapp"
+	(referenced from command line).
 
 </pre></body></html>
